--- a/index.html
+++ b/index.html
@@ -1,130 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Snake Game</title>
-    <style>
-      canvas {
-        border: 1px solid black;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="canvas" width="300" height="300"></canvas>
-    <script>
-      const canvas = document.getElementById('canvas');
-      const ctx = canvas.getContext('2d');
+<html lang="en">
 
-      // Set up the initial game state
-      let snake = [{ x: 10, y: 10 }];
-      let dx = 10;
-      let dy = 0;
-      let food = createFood();
-      let score = 0;
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Day #17 - Snake Game | AsmrProg</title>
+</head>
 
-      // Set up the game loop
-      setInterval(() => {
-        moveSnake();
-        if (checkCollisions()) {
-          resetGame();
-        }
-        if (checkFoodCollision()) {
-          eatFood();
-        }
-        drawGame();
-      }, 100);
+<body>
 
-      // Move the snake
-      function moveSnake() {
-        const head = { x: snake[0].x + dx, y: snake[0].y + dy };
-        snake.unshift(head);
-        snake.pop();
-      }
+    <div class="wrapper">
+        <div class="game-details">
+            <span class="score">Score: 0</span>
+            <span class="high-score">High Score: 0</span>
+        </div>
 
-      // Handle user input
-      document.addEventListener('keydown', (event) => {
-        if (event.code === 'ArrowUp' && dy !== 10) {
-          dx = 0;
-          dy = -10;
-        } else if (event.code === 'ArrowDown' && dy !== -10) {
-          dx = 0;
-          dy = 10;
-        } else if (event.code === 'ArrowLeft' && dx !== 10) {
-          dx = -10;
-          dy = 0;
-        } else if (event.code === 'ArrowRight' && dx !== -10) {
-          dx = 10;
-          dy = 0;
-        }
-      });
+        <div class="play-board"></div>
 
-      // Draw the game
-      function drawGame() {
-        // Clear the canvas
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        <div class="controls">
+            <i data-key="ArrowLeft" class="fa-solid fa-arrow-left-long"></i>
+            <i data-key="ArrowUp" class="fa-solid fa-arrow-up-long"></i>
+            <i data-key="ArrowRight" class="fa-solid fa-arrow-right-long"></i>
+            <i data-key="ArrowDown" class="fa-solid fa-arrow-down-long"></i>
+        </div>
 
-        // Draw the snake
-        ctx.fillStyle = 'green';
-        snake.forEach((segment) => {
-          ctx.fillRect(segment.x, segment.y, 10, 10);
-        });
+    </div>
 
-        // Draw the food
-        ctx.fillStyle = 'red';
-        ctx.fillRect(food.x, food.y, 10, 10);
 
-        // Draw the score
-        ctx.fillStyle = 'black';
-        ctx.font = '16px Arial';
-        ctx.fillText(`Score: ${score}`, 10, 20);
-      }
+    <script src="index.js"></script>
+</body>
 
-      // Create a new food item at a random position
-      function createFood() {
-        const x = Math.floor(Math.random() * (canvas.width / 10)) * 10;
-        const y = Math.floor(Math.random() * (canvas.height / 10)) * 10;
-        return { x, y };
-      }
-
-      // Check for collisions with the walls or the snake's tail
-      function checkCollisions() {
-        const head = snake[0];
-        if (
-          head.x < 0 ||
-          head.x >= canvas.width ||
-          head.y < 0 ||
-          head.y >= canvas.height ||
-          snake.slice(1).some((segment) => segment.x === head.x && segment.y === head.y)
-        ) {
-          return true;
-        }
-        return false;
-      }
-
-      // Check for collisions with the food
-      function checkFoodCollision() {
-        const head = snake[0];
-        if (head.x === food.x && head.y === food.y) {
-          return true;
-        }
-        return false;
-      }
-
-            // Eat the food and create a new one
-            function eatFood() {
-        snake.push({});
-        food = createFood();
-        score++;
-      }
-
-      // Reset the game state
-      function resetGame() {
-        snake = [{ x: 10, y: 10 }];
-        dx = 10;
-        dy = 0;
-        food = createFood();
-        score = 0;
-      }
-    </script>
-  </body>
 </html>
-
